@@ -2,6 +2,7 @@ package io.github.maodua.wrench.file.api;
 
 import io.github.maodua.wrench.common.vo.result.Result;
 import io.github.maodua.wrench.file.autoconfig.FileStoreConfigure;
+import io.github.maodua.wrench.file.bean.FileStore;
 import io.github.maodua.wrench.file.service.IFileStoreService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.core.io.FileSystemResource;
@@ -13,9 +14,11 @@ import org.springframework.web.bind.annotation.*;
 import org.springframework.web.multipart.MultipartFile;
 
 import java.io.IOException;
+import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 /**
  * 本地文件存储
@@ -34,20 +37,20 @@ public class BaseLocalFileStoreApi {
         if (file.isEmpty()) {
             return Result.fail("上传失败");
         }
-        var id = this.fileStoreService.saveFile(file, null);
+        String id = this.fileStoreService.saveFile(file, null);
         return Result.success(id);
 
     }
 
     @GetMapping("{id}")
-    public ResponseEntity<Resource> show(@PathVariable String id) {
-        var fileStore = fileStoreService.getById(id);
+    public ResponseEntity<Resource> show(@PathVariable String id) throws UnsupportedEncodingException {
+        FileStore fileStore = fileStoreService.getById(id);
         // 文件路径
-        var filePath = Path.of(fileStoreConfigure.getRootPath(), fileStore.getFilepath());
+        Path filePath = Paths.get(fileStoreConfigure.getRootPath(), fileStore.getFilepath());
         // 转码后的文件名
-        var fileName = URLEncoder.encode(fileStore.getFilename(), StandardCharsets.UTF_8);
+        String fileName = URLEncoder.encode(fileStore.getFilename(), String.valueOf(StandardCharsets.UTF_8));
         // header 中 content-disposition
-        var contentDisposition = "inline; filename*=utf-8''" + fileName;
+        String contentDisposition = "inline; filename*=utf-8''" + fileName;
 
         // MediaType
         MediaType mediaType = MediaType.parseMediaType(fileStore.getFiletype());
@@ -59,14 +62,14 @@ public class BaseLocalFileStoreApi {
     }
 
     @GetMapping("download/{id}")
-    public ResponseEntity<Resource> download(@PathVariable String id) {
-        var fileStore = fileStoreService.getById(id);
+    public ResponseEntity<Resource> download(@PathVariable String id) throws UnsupportedEncodingException {
+        FileStore fileStore = fileStoreService.getById(id);
         // 文件路径
-        var filePath = Path.of(fileStoreConfigure.getRootPath(), fileStore.getFilepath());
+        Path filePath = Paths.get(fileStoreConfigure.getRootPath(), fileStore.getFilepath());
         // 转码后的文件名
-        var fileName = URLEncoder.encode(fileStore.getFilename(), StandardCharsets.UTF_8);
+        String fileName = URLEncoder.encode(fileStore.getFilename(), String.valueOf(StandardCharsets.UTF_8));
         // header 中 content-disposition
-        var contentDisposition = "attachment; filename*=utf-8''" + fileName;
+        String contentDisposition = "attachment; filename*=utf-8''" + fileName;
 
         return ResponseEntity.ok()
             // 设置 mime 为二进制流数据
